--- a/SOLIDPrinciplesLab/SOLIDPrinciplesLab/SOLIDPrinciplesLab.csproj
+++ b/SOLIDPrinciplesLab/SOLIDPrinciplesLab/SOLIDPrinciplesLab.csproj
@@ -187,7 +187,18 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SRP_Example1\CustomExceptionHandler.cs" />
     <Compile Include="SRP_Example1\FreeFileShareWebsite_NOSRP.cs" />
+    <Compile Include="SRP_Example1\FreeFileShareWebsite_SRP.cs" />
+    <Compile Include="SRP_Example2\IAuthenticationManager_SRP.cs" />
+    <Compile Include="SRP_Example2\IFileManager_SRP.cs" />
+    <Compile Include="SRP_Example2\IFreeFileShareWebsite_NOSRP.cs" />
+    <Compile Include="SRP_Example3\AbstractFreeFileShareWebsiteAccount_SRP.cs" />
+    <Compile Include="SRP_Example3\AppBox.cs" />
+    <Compile Include="SRP_Example3\DropBox.cs" />
+    <Compile Include="SRP_Example3\IFreeFileShareWebsiteAccount_NOSRP.cs" />
+    <Compile Include="SRP_Example3\IPayMoney.cs" />
+    <Compile Include="SRP_Example3\YouTube.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
