--- a/SOLIDPrinciplesLab/SOLIDPrinciplesLab/SOLIDPrinciplesLab.csproj
+++ b/SOLIDPrinciplesLab/SOLIDPrinciplesLab/SOLIDPrinciplesLab.csproj
@@ -180,12 +180,19 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\OCPController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="OCP_Example1\FreeFileShareWebsiteAccount_NOOCP.cs" />
+    <Compile Include="OCP_Example1\FreeFileShareWebsiteAccount_OCP.cs" />
+    <Compile Include="OCP_Example1\FreeFileShareWebsiteGoldAccount_OCP.cs" />
+    <Compile Include="OCP_Example1\FreeFileShareWebsiteTrialAccount_OCP.cs" />
+    <Compile Include="OCP_Example2\Product.cs" />
+    <Compile Include="OCP_Example2\ProductFilter_NOOCP.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SRP_Example1\CustomExceptionHandler.cs" />
     <Compile Include="SRP_Example1\FreeFileShareWebsite_NOSRP.cs" />
@@ -256,6 +263,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\OCP\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
