--- a/SOLIDPrinciplesLab/SOLIDPrinciplesLab/SOLIDPrinciplesLab.csproj
+++ b/SOLIDPrinciplesLab/SOLIDPrinciplesLab/SOLIDPrinciplesLab.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\OCPController.cs" />
+    <Compile Include="Controllers\OCPDataController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -191,8 +192,11 @@
     <Compile Include="OCP_Example1\FreeFileShareWebsiteAccount_OCP.cs" />
     <Compile Include="OCP_Example1\FreeFileShareWebsiteGoldAccount_OCP.cs" />
     <Compile Include="OCP_Example1\FreeFileShareWebsiteTrialAccount_OCP.cs" />
+    <Compile Include="OCP_Example2\ISearchBehaviour.cs" />
     <Compile Include="OCP_Example2\Product.cs" />
     <Compile Include="OCP_Example2\ProductFilter_NOOCP.cs" />
+    <Compile Include="OCP_Example2\ProductFilter_OCP.cs" />
+    <Compile Include="OCP_Example2\SearchBySizeBehaviour_OCP.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SRP_Example1\CustomExceptionHandler.cs" />
     <Compile Include="SRP_Example1\FreeFileShareWebsite_NOSRP.cs" />
@@ -264,6 +268,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\OCP\Index.cshtml" />
+    <Content Include="Views\OCPData\OCPData.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
