--- a/SOLIDPrinciplesLab/SOLIDPrinciplesLab/SOLIDPrinciplesLab.csproj
+++ b/SOLIDPrinciplesLab/SOLIDPrinciplesLab/SOLIDPrinciplesLab.csproj
@@ -182,9 +182,40 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\OCPController.cs" />
     <Compile Include="Controllers\OCPDataController.cs" />
+    <Compile Include="DIP_Example1\Discount.cs" />
+    <Compile Include="DIP_Example1\IDiscount.cs" />
+    <Compile Include="DIP_Example1\Invoice_DIP.cs" />
+    <Compile Include="DIP_Example1\Invoice_NODIP.cs" />
+    <Compile Include="DIP_Example1\IVAT.cs" />
+    <Compile Include="DIP_Example1\Order.cs" />
+    <Compile Include="DIP_Example1\VAT.cs" />
+    <Compile Include="DIP_Example2\EventViewerHandller.cs" />
+    <Compile Include="DIP_Example2\FileExceptionHandller.cs" />
+    <Compile Include="DIP_Example2\FreeFileShareWebsite.cs" />
+    <Compile Include="DIP_Example2\IExceptionHandller.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="ISP_Example1\Client1.cs" />
+    <Compile Include="ISP_Example1\Client3.cs" />
+    <Compile Include="ISP_Example1\IEMail.cs" />
+    <Compile Include="ISP_Example1\INotification.cs" />
+    <Compile Include="ISP_Example1\Client2.cs" />
+    <Compile Include="ISP_Example1\ISMS.cs" />
+    <Compile Include="LSP_Example1\FileShareWebsiteAccount_LSP.cs" />
+    <Compile Include="LSP_Example1\FileShareWebsiteAccount_NOLSP.cs" />
+    <Compile Include="LSP_Example1\FileShareWebsiteGoldAccount_LSP.cs" />
+    <Compile Include="LSP_Example1\FileShareWebsiteGoldAccount_NOLSP.cs" />
+    <Compile Include="LSP_Example1\FileShareWebsitePlatinumAccount_LSP.cs" />
+    <Compile Include="LSP_Example1\FileShareWebsitePlatinumAccount_NOLSP.cs" />
+    <Compile Include="LSP_Example1\FileShareWebsiteTrialAccount_LSP.cs" />
+    <Compile Include="LSP_Example1\FileShareWebsiteTrialAccount_NOLSP.cs" />
+    <Compile Include="LSP_Example1\IGustAccount.cs" />
+    <Compile Include="LSP_Example1\IPaidAccount.cs" />
+    <Compile Include="LSP_Example2\ContentManagementSystems_NOLSP.cs" />
+    <Compile Include="LSP_Example2\FacebookContentValidator.cs" />
+    <Compile Include="LSP_Example2\GoogleContentValidator.cs" />
+    <Compile Include="LSP_Example2\IValidate.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
